--- a/src/pages/collection-points/CollectionPoints.module.css
+++ b/src/pages/collection-points/CollectionPoints.module.css
@@ -4,7 +4,7 @@
   background: #fff;
   display: flex;
   flex-direction: column;
-  font-family: 'Inter', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 /* Header */
