--- a/src/pages/cadastro/Cadastro.module.css
+++ b/src/pages/cadastro/Cadastro.module.css
@@ -5,7 +5,7 @@
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-  font-family: 'Arial', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .loginContainer h2 {
