--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -7,13 +7,13 @@
 
 /* Estilo do fundo da página */
 body {
-  font-family: Arial, sans-serif;
   background-color: #fff;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 24px;
+  font-family: "Poppins", sans-serif;
 }
 
 /* Card do login */
