--- a/src/pages/collection-status/CollectionStatus.module.css
+++ b/src/pages/collection-status/CollectionStatus.module.css
@@ -7,6 +7,10 @@
   display: flex;
   flex-direction: column;
   font-family: "Poppins", sans-serif;
+
+  a:hover {
+    cursor: pointer;
+  }
 }
 
 /* Header unificado */
